syntax = "proto3";

option go_package = "./rpc";

service Ffmpeg { //行人检测rpc
  rpc VideoStream (VideoStreamStruct) returns (VideoStreamResponse) {}  //拉取视频流,并推流
  rpc ChangeFfmpegFlag (FlagParam) returns (ChangeFlagFfmpegResponse) {}  //拉取视频流,并推流
}


message ChangeFlagFfmpegResponse {
  bool error = 1;
  string message = 2;
}

message VideoStreamStruct{
  repeated string rtsp_url=1;
  repeated string rtmp_url=2;
}

message VideoStreamResponse{
  bool error = 1;
  string message = 2;
  repeated  string rtmp_url=3;
}

message FlagParam{
  bool flag=1;
}



